--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html {
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
   font-family: "Edu AU VIC WA NT Hand", cursive;
+  font-size: 0.8rem;
 }
 
 /* Remove default margin in favour of better control in authored CSS */
@@ -108,6 +109,12 @@ input::placeholder {
   color: inherit;
 }
 
+@media (min-width: 500px) {
+  html {
+    font-size: 1rem;
+  }
+}
+
 .primary-heading {
   font-size: 2rem;
   text-align: center;
@@ -142,7 +149,6 @@ input::placeholder {
 
   border-radius: 2em;
   z-index: -1;
-  transform: translateX(attr(data-translate));
   box-shadow: -1px 0 4px 1px var(--clr-primary-900);
   transition: transform 200ms ease-in;
 }
@@ -169,7 +175,8 @@ input::placeholder {
   display: flex;
   gap: 0.6rem;
   flex-wrap: wrap;
-  max-height: 0.6rem;
+  align-items: center;
+  height: 20%;
 }
 
 .status-code-block button {
@@ -187,19 +194,12 @@ input::placeholder {
   color: var(--clr-accent-100);
 }
 
-.img-block {
-  width: 100%;
-  height: 100%;
-}
-
 [data-tab-content] {
   display: none;
 }
 
 .active[data-tab-content] {
   display: grid;
-  grid-template-rows: 0.6fr repeat(2, minmax(100px, 200px));
   transition: grid-template-rows 500ms;
   gap: 1rem;
-  min-height: 40vh;
 }
